syntax = "proto3";

import "www.velocidex.com/golang/velociraptor/proto/semantic.proto";
import "www.velocidex.com/golang/velociraptor/actions/proto/vql.proto";

package proto;

message VFSListRequest {
    string client_id = 1 [(sem_type) = {
            description: "The client to list",
            type: "RDFURN",
            label: HIDDEN,
        }];

    string vfs_path = 2 [(sem_type) = {
            description: "The VFS Path to list files in .",
        }];

    uint64 recursion_depth = 3 [(sem_type) = {
            default: "0",
            description: "If > 0 then recurse this many directories.",
        }];
}

message VFSListRequestState {
    string vfs_path = 1;
    string accessor = 3;
    VQLResponse current = 2;
}

message VFSDownloadFileRequest {
    string client_id = 1 [(sem_type) = {
            description: "The client id",
            type: "RDFURN",
            label: HIDDEN,
        }];

    repeated string vfs_path = 2 [(sem_type) = {
            description: "The VFS Path to the file to download.",
        }];
}

message ClientMonitoringState {
    uint64 version = 1 [(sem_type) = {
            description: "The client's reported version.",
        }];

    uint64 last_update_timestamp = 2 [(sem_type) = {
            description: "The last time we updated the client."
        }];
}